--- a/BingeWatcher/Views/Shared/_Layout.cshtml
+++ b/BingeWatcher/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Anime" asp-action="Index">Animes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Genre" asp-action="Index">Genres</a>
+                        </li>
                     </ul>
                 </div>
             </div>
