--- a/BingeWatcher/Views/Genre/Index.cshtml
+++ b/BingeWatcher/Views/Genre/Index.cshtml
@@ -1,5 +1,34 @@
-﻿<section id="genresIndex">
-    <div class="container">
-        <h1>Gêneros</h1>
+﻿@model List<Genre>
+
+<div class="container">
+    <div class="row pt-4 pr-4">
+        <div class="col-6">
+            <h1>Gêneros</h1>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Genre" asp-area="" asp-action="Create" class="btn btn-primary">Criar novo Gênero</a>
+        </div>
     </div>
-</section>
+</div>
+<table class="table table-striped table-bordered table-hover table-dark">
+    <thead>
+        <tr>
+            <th>Gênero</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var obj in Model.OrderBy(u=> u.Id))
+        {
+            <tr>
+                <td>@obj.Name</td>
+                <td style="width: 25px;">
+                    <div class="btn-group" style="width: 100%;" role="group">
+                        <a asp-area="" asp-controller="Genre" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-outline-primary mx-2">Editar</a>
+                        <a asp-area="" asp-controller="Genre" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-outline-danger ml-2">Excluir</a>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
