--- a/BingeWatcher/Views/Anime/Index.cshtml
+++ b/BingeWatcher/Views/Anime/Index.cshtml
@@ -6,7 +6,7 @@
             <h1>Animes</h1>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Anime" asp-area="" asp-action="Upsert" class="btn btn-primary">Criar/Editar Anime</a>
+            <a asp-controller="Anime" asp-area="" asp-action="Upsert" class="btn btn-primary">Criar Anime</a>
         </div>
     </div>
 </div>
@@ -32,7 +32,7 @@
                 <td>@obj.Status</td>
                 <td style="width: 25px;">
                     <div class="btn-group" style="width: 100%;" role="group">
-                        <a asp-area="" asp-controller="Anime" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-outline-primary mx-2">Editar</a>
+                        <a asp-area="" asp-controller="Anime" asp-action="Upsert" asp-route-Id="@obj.Id" class="btn btn-outline-primary mx-2">Editar</a>
                         <a asp-area="" asp-controller="Anime" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-outline-danger ml-2">Excluir</a>
                     </div>
                 </td>
