--- a/BingeWatcher/Views/_ViewImports.cshtml
+++ b/BingeWatcher/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BingeWatcher
 @using BingeWatcher.Models
+@using BingeWatcher.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
