--- a/BingeWatcher/Areas/Admin/Views/Anime/Upsert.cshtml
+++ b/BingeWatcher/Areas/Admin/Views/Anime/Upsert.cshtml
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="col-2">
-            <img src="@Model.Anime.Main_Picture" width="100%" style="border-radius: 5px; border: 1px solid #161616" />
+            <img src="@Model.Anime.Main_Picture" width="100" style="border-radius: 5px; border: 1px solid #161616" />
         </div>
     </div>
     <div class="border p-3 mt-4">
