--- a/BingeWatcher/Areas/User/Views/Home/Details.cshtml
+++ b/BingeWatcher/Areas/User/Views/Home/Details.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        <img src="@Model.Main_Picture" width="100" class="rounded" />
+                        <img src="@Model.Main_Picture" width="100%" class="rounded" />
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
@@ -44,7 +44,7 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary text-white border-0 fw-semibold"
                                           id="inputGroup-sizing-default">
-                                        Count
+                                        Assistidos
                                     </span>
                                     <input type="number" value="1" class="form-control text-end"
                                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
