--- a/BingeWatcher/Views/Shared/_Layout.cshtml
+++ b/BingeWatcher/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Termos</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
